# cutter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: basic.frag  basic.vert  common.h  compute.comp  drawSkybox.frag  generateSkybox.comp  globalDescriptorSet.h  pbr.h
content/glb/: Cube.glb  ShaderBall.glb
include/: Camera.hpp  DebugUtils.hpp  Glm.hpp  Graphics.hpp  ImageUtils.hpp  JobSystem.hpp  Scene.hpp  ShaderUtils.hpp  Stb.h  Utils.hpp  VkUtils.hpp  Vma.hpp
src/: Camera.cpp  DebugUtils.cpp  Graphics.cpp  ImageUtils.cpp  JobSystem.cpp  Scene.cpp  ShaderUtils.cpp  Stb.c  Utils.cpp  VkUtils.cpp  Vma.cpp  main.cpp
src/shaders/: basic.frag  basic.vert  blur.comp  common.h  computeBloomAndTonemap.comp  computeBlur2D.comp  computeBrdfLut.comp  computeIrradianceMap.comp  computePlaneCut.comp  computePrefilteredMap.comp  computeSkybox.comp  cutting.comp  drawSkybox.frag  drawSkybox.vert  final.comp  fragmentUtils.h  generateSkybox.comp  globalDescriptorSet.h  line.frag  line.vert  model.frag  model.vert  modelDescriptorSet.h  normalizeNormalMap.comp  pbr.h  renderBurnMap.frag  renderBurnMap.vert  renderCutLine.frag  renderModel.frag  renderModel.vert  renderSkybox.frag  renderSkybox.vert  renderWireframe.frag  renderWireframe.vert  utils.h
